03-infrastructure/stable_ajayshandbook_us-east-2_mgmt-cluster/addons/manifests/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.mgmt-cluster.us-east-2.ajayshandbook.com`)
      kind: Rule
      services:
        - name: argo-cd-argocd-server
          port: 80
  tls: {}
